--- a/gitea-pg/postgres-cluster.yaml
+++ b/gitea-pg/postgres-cluster.yaml
@@ -13,7 +13,9 @@ spec:
       secret:
         name: gitea-pg-users
       postInitSQL:
-        - CREATE DATABASE giteadb WITH OWNER gitea TEMPLATE template0 ENCODING UTF8 LC_COLLATE 'en_US.UTF-8' LC_CTYPE 'en_US.UTF-8';
+        - create schema gitea;
+        - alter use gitea set search_path=gitea;
+        - grant all on schema gitea to gitea;
       localeCType: 'en_US.UTF-8'
       localeCollate: 'en_US.UTF-8'
   storage:
