--- a/xmage/xmage-deployment.yaml
+++ b/xmage/xmage-deployment.yaml
@@ -18,7 +18,8 @@ spec:
     spec:
       containers:
         - name: xmage
-          image: "goesta/xmage-beta:1.4.55-dev_2024-12-16_21-00"
+          image: "harbor/xmage-server"
+          tag: latest
           env:
             - name: XMAGE_DOCKER_SERVER_ADDRESS
               value: "0.0.0.0"
