--- a/harbor/values.yaml
+++ b/harbor/values.yaml
@@ -28,6 +28,8 @@ harbor:
         accesskey: <path:kv/data/harbor#minio_secret_id>
         secretkey: <path:kv/data/harbor#minio_secret_key>
         regionendpoint: https://minio.dev-riles.xyz
+        secure: true
+        v4auth: true
     enabled: false
   database:
     type: external
