--- a/immich/immich-secret.yaml
+++ b/immich/immich-secret.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 metadata:
   name: immich-pg-secret
   annotations:
-    avp.kubernetes.io/path: "kv/data/immich"
+    avp.kubernetes.io/path: "kv/data/immich-pg"
     avp.kubernetes.io/secret-version: "1"
 type: Opaque
 stringData:
