--- a/immich/immich-secret.yaml
+++ b/immich/immich-secret.yaml
@@ -7,5 +7,5 @@ metadata:
     avp.kubernetes.io/secret-version: "1"
 type: Opaque
 stringData:
-  username: <username>
+  username: <user>
   password: <password>
